[project]
name = "nexus-config-env"
version = "0.1.0"
description = "Nexus Configuration Environment for OpenEnv Hackathon"
authors = [
    { name = "Vignesh E", email = "vigneshdev1022@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "openenv-core>=0.2.3",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "openai",
    "pydantic",
    "pyyaml",
    "gradio>=6.0.0",
    "python-dotenv",
    "jinja2"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.openenv]
entry_point = "server.app:app"